feat: add support CNT notifications and subscriptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost/onem2m_recorder
-spring.datasource.username=onem2m_user
+spring.datasource.username=onem2m
 spring.datasource.password=hjbwc1chmEXb
 spring.jpa.hibernate.ddl-auto=update
 
@@ -10,3 +10,4 @@ application.onem2m.url = http://localhost:7579
 application.onem2m.cseBase = Mobius
 application.onem2m.origin = Cegm
 
+application.base.url = http://localhost:8080
