feat: integrate TimescaleDB and r2dbc reactive driver

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost/onem2m_recorder
-spring.datasource.username=onem2m
-spring.datasource.password=hjbwc1chmEXb
-spring.jpa.hibernate.ddl-auto=update
-
 logging.level.root=INFO
 logging.level.com.egm.onem2m=DEBUG
+logging.level.org.springframework.data.r2dbc=DEBUG
 
 application.onem2m.url = http://localhost:7579
 application.onem2m.cseBase = Mobius
-application.onem2m.origin = Cegm
+application.onem2m.origin = CEgm
 
 application.base.url = http://localhost:8080
+
+application.datasource.database = onem2m_recorder
+application.datasource.host = localhost
+application.datasource.port = 5432
+application.datasource.user = onem2m
+application.datasource.password = hjbwc1chmEXb
+application.datasource.driver = postgresql
