chore: cleanup configuration file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ application.datasource.database = onem2m_recorder
 application.datasource.host = localhost
 application.datasource.port = 5432
 application.datasource.user = onem2m
-application.datasource.password = hjbwc1chmEXb
+application.datasource.password = onem2m_password
 application.datasource.driver = postgresql
